--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="action_settings">Settings</string>
 
     <string name="hello" translatable="true">Hello World!</string>
+    <string name="sign_in" translatable="true">Sign In</string>
 </resources>
